Trivial code cleanups